# jh-tcc

./: .gitignore  CMakeLists.txt  CMakeLists_.txt  README.md  aplication.qrc  appicon.rc  application.qrc  flashdraws.desktop  qtquickcontrols2.conf  qtquickstyle.conf
config/: flashdraws.desktop
source/: Main.qml  RefWindow.qml
source/backend/: main.cpp
source/backend/applicationBackend/: applicationBackend.cpp  applicationBackend.hpp
source/backend/componentsQml/clipboard/: clipboard.cpp  clipboard.h
source/backend/componentsQml/filesGrabber/: filesGrabber.cpp  filesGrabber.h
source/backend/componentsQml/homeWindowBackend/: homeWindowBackend.cpp  homeWindowBackend.h
source/backend/componentsQml/imagesWindowBackend/: imagesWindowBackend.cpp  imagesWindowBackend.h  imageswindowbackend.cpp  imageswindowbackend.h
source/backend/componentsQml/sessionControlWindowBackend/: sessionControlWindowBackend.cpp  sessionControlWindowBackend.h
source/backend/componentsQml/sessionControlWindowBackend/utils/SCWSClassroom/: SCWSClassroom.cpp  SCWSClassroom.h
source/backend/componentsQml/sessionControlWindowBackend/utils/SCWSInfinityImages/: SCWSInfinityImages.cpp  SCWSInfinityImages.h
source/backend/componentsQml/sessionControlWindowBackend/utils/SCWSInfinityTime/: SCWSInfinityTime.cpp  SCWSInfinityTime.h
source/backend/componentsQml/sessionControlWindowBackend/utils/SCWSNormal/: SCWSNormal.cpp  SCWSNormal.h
source/backend/componentsQml/sessionControlWindowBackend/utils/SCWSSandbox/: SCWSSandbox.cpp  SCWSSandbox.h
source/backend/componentsQml/sessionControlWindowBackend/utils/sessionControlWindowState/: sessionControlWindowState.cpp  sessionControlWindowState.h
source/backend/componentsQml/timer/: timer.cpp  timer.h
source/backend/enums/: sessionModes.h
source/backend/helpers/: sessionModeReader.cpp  sessionModeReader.h
source/backend/helpers/classroomSessionHelper/: classroomSessionHelper.cpp  classroomSessionHelper.h
source/backend/helpers/classroomSessionHelper/utils/classroomSessionRoadmapStep/: classroomSessionRoadmapStep.cpp  classroomSessionRoadmapStep.h
source/backend/helpers/responseData/: responseData.h
source/backend/helpers/sessionModeReader/: sessionModeReader.cpp  sessionModeReader.h
source/backend/helpers/timeConvertion/: timeConvertion.cpp  timeConvertion.h
source/backend/homeWindowBackend/: homeWindowBackend.cpp  homeWindowBackend.h
source/backend/utils/Timer/: timer.cpp  timer.h
source/backend/utils/clipboard/: clipboard.cpp  clipboard.h
source/backend/utils/filesGrabber/: filesGrabber.cpp  filesGrabber.h
source/backend/utils/refGetter/: getterfiles.cpp  getterfiles.h  getterref.cpp  getterref.h
source/backend/utils/timer/: timer.h
source/frontend/: Main.qml
source/frontend/components/buttonFolderDialog/: ButtonFolderDialog.qml
source/frontend/components/defaultWindow/: DefaultWindow.qml
source/frontend/components/draggableArea/: DraggableArea.qml
source/frontend/components/flashDrawSessionWindow/: FlashDrawSessionWindow.qml
source/frontend/components/flashDrawSessionWrapper/: DialogConfirmFinishSession.qml  FlashDrawSessionWrapper.qml
source/frontend/components/flashDrawSessionWrapper/components/dialogConfirmFinishSession/: DialogConfirmFinishSession.qml
source/frontend/components/flashDrawSessionWrapper/components/flashDrawSessionControlWindow/: FlashDrawSessionControlWindow.qml
source/frontend/components/flashDrawSessionWrapper/components/flashDrawSessionWindow/: FlashDrawSessionWindow.qml
source/frontend/components/flashDrawSessionWrapper/components/flashDrawWindow/: FlashDrawWindow.qml
source/frontend/components/flashDrawSessionWrapper/components/imagesWindow/: ImagesWindow.qml
source/frontend/components/flashDrawWindow/: FlashDrawWindow.qml
source/frontend/components/homeWindow/: HomeWindow.qml
source/frontend/components/imageButton/: ImageButton.qml
source/frontend/components/inputs/: Input.qml  InputNumber.qml
source/frontend/components/magnitudeDisplay/: MagnitudeDisplay.qml  MagnitudeObj.qml  timeDisplay.qml
source/frontend/components/sessionWrapper/: SessionWrapper.qml
source/frontend/components/sessionWrapper/components/dialogConfirmFinishSession/: DialogConfirmFinishSession.qml
source/frontend/components/sessionWrapper/components/imagesWindow/: ImagesWindow.qml
source/frontend/components/sessionWrapper/components/sessionControlWindow/: SessionControlWindow.qml
source/frontend/components/toggleButton/: ToggleButton.qml
